# ping-pong

./: Cargo.toml  build.rs
proto/: ping_pong.proto
src/: lib.rs  pingpong_client.rs  scheduler_server.rs
src/lib/: client.rs
src/pingpongcs/: client.rs  mod.rs  server.rs
tests/: end_to_end_test.rs
