[package]
name = "ping-pong"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "scheduler-server"
path = "src/scheduler_server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "pingpong-client"
path = "src/pingpong_client.rs"

[dependencies]
tonic = "0.8.1"
prost = "0.11.0"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1" }
pin-project = "1.1.5"
async-stream = "0.3.5"
mockall = "0.10.2"

[dev-dependencies]
mockall = "0.10.2"

[build-dependencies]
tonic-build = "0.8.0"
[lib]
name = "ping_client"
path = "src/lib/client.rs"